# fileshare

./: .gitignore  Cargo.toml  Rocket.toml  make.sh
fileshare-build/: Cargo.toml
fileshare-build/src/: main.rs  server.rs
src/: Main.elm  index.html  main.rs  reload.js
