[package]
name = "fileshare-build"
version = "0.1.0"
authors = ["John Matthew Narofsky <7ytd765789@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.17"
anyhow = "1"
thiserror = "1"
fehler = "1"
which = "4.0.2"
globset = "0.4.5"
walkdir = "2.3.1"
fsio = "0.1.3"
notify = "4.0.15"
hotwatch = "0.4.3"
foretry = { git = "https://github.com/Monadic-Cat/foretry.git" }
tungstenite = "0.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "0.2", features = ["full"] }
tokio-tungstenite = "0.11.0"
futures = "0.3.5"
rand = "0.7.3"
